@@ -403,7 +403,7 @@ func (b *Box) GetFocusable() Focusable {
 	return b.focus
 }
 
-// GetChildren gets the children.
+// GetChildren returns nil because Box doesn't have any use for children.
 func (b *Box) GetChildren() []Primitive {
 	return nil
 }
