@@ -2,6 +2,7 @@ v1.4.1 (WIP)
 - Add ProgressBar widget
 - Add Application.RingBell
 - Add example multi-layout application and mouse-enabled application
+- Add documentation for GetChildren methods
 
 v1.4.0 (2020-01-16)
 - Bump version to resolve issues with "go get"
